--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.dana.jpeg.icloud
+.IMG_1870.jpeg.icloud
+Visualization.html
+.Visualization.html.icloud
+Visualization.html
